apps/response/sbox-intsvc/base/slack-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rpe-response-api-slack-sandbox
  namespace: response
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: response-api-slack-sandbox.platform.hmcts.net
      http:
        paths:
          - path: /slack
            pathType: Prefix
            backend:
              service:
                name: rpe-response-api-nodejs-sandbox
                port:
                  number: 80
